--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -10,11 +10,12 @@ max_peers = 100
 min_peers_seed = 1
 max_peers_seed = 50
 
-# Maximum number of simultanious uploads per torrent.
-max_uploads = 20
+# Maximum number of uploads single torrent may use
+max_uploads = 10
 
 # Maximum number of simultaneous downloads
 max_downloads_global = 3
+# Maximum number of simultaneous uploads
 max_uploads_global = 20
 
 # Global upload and download rate in KiB. "0" for unlimited.
@@ -45,14 +46,17 @@ schedule = session_save,240,300,session_save=
 ratio.enable=
 
 # Change the limits, the defaults should be sufficient.
+# Upload to a minimum ratio of 4.0
 ratio.min.set=400
+# Upload to a maximum ratio of 20.0
 ratio.max.set=2000
+# Upload a minimum of 250 MB
 ratio.upload.set=250M
 
 # When seeding ratio is reached close the torrent
 system.method.set = group.seeding.ratio.command, d.close=
 
-# Move files around when download completes
+# Move files to ./unsorted when download completes
 system.method.set_key = event.download.finished,move_complete,"execute=mv,-n,$d.get_base_path=,./unsorted/;d.set_directory=./unsorted/"
 
 # Port range to use for listening.
@@ -69,6 +73,11 @@ port_random = yes
 # plaintext to RC4 encryption after the encrypted handshake
 #
 encryption = allow_incoming,try_outgoing,enable_retry,prefer_plaintext
+
+# Sort the seeding view by the upload rate
+view_sort_current = seeding,greater=d.get_up_rate=
+view_sort_new = seeding,greater=d.get_up_rate=
+schedule = sort,5,2,view_sort=seeding
 
 # Enable DHT support for trackerless torrents or when all trackers are down.
 # May be set to "disable" (completely disable DHT), "off" (do not start DHT),
