--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -86,6 +86,9 @@ view.sort_current = main,greater=d.get_ratio=
 view.sort_new = main,less=d.get_ratio=
 view.sort = main,3
 
+#schedule = sort,2,2,view_sort=seed_rate
+#schedule = sort,0,2,view_sort=ratio
+
 # Enable DHT support for trackerless torrents or when all trackers are down.
 # May be set to "disable" (completely disable DHT), "off" (do not start DHT),
 # "auto" (start and stop DHT as needed), or "on" (start DHT immediately).
