--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -73,21 +73,32 @@ port_random = yes
 #
 encryption = allow_incoming,try_outgoing,enable_retry,prefer_plaintext
 
-# Sort the seeding view by the upload rate
-view.sort_current = seeding,greater=d.get_up_rate=
-view.sort_new = seeding,less=d.get_up_rate=
-view.sort = seeding,3
-
-view.sort_current = leeching,greater=d.get_down_rate=
-view.sort_new = leeching,greater=d.get_down_rate=
-view.sort = leeching,3
-
+# Sort the main view by ratio
 view.sort_current = main,greater=d.get_ratio=
 view.sort_new = main,less=d.get_ratio=
-view.sort = main,3
+view.sort = main
 
-#schedule = sort,2,2,view_sort=seed_rate
-#schedule = sort,0,2,view_sort=ratio
+# Sort the seeding view by the upload rate and only show torrents with peers
+view.sort_current = seeding,greater=d.get_up_rate=
+view.filter = seeding,d.get_peers_connected=
+view.sort_new = seeding,less=d.get_up_rate=
+view.sort = seeding
+
+# Sort the leeching view by name
+view.sort_current = leeching,greater=d.get_name=
+view.sort_new = leeching,greater=d.get_name=
+view.sort = leeching
+
+# Filter the active view by connected peers
+view.sort_current = active,less=d.get_name=
+view.sort_new = leeching,less=d.get_name=
+view.filter = active,d.get_peers_connected=
+view.sort = active
+
+schedule = sort_main,11,5,view.sort=main
+schedule = sort_seeding,12,5,view.sort=seeding
+schedule = sort_leeching,13,5,view.sort=leeching
+schedule = sort_active,14,5,view.sort=active
 
 # Enable DHT support for trackerless torrents or when all trackers are down.
 # May be set to "disable" (completely disable DHT), "off" (do not start DHT),
