--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # Rebind to ^a and reduce escape time
 set-option -g prefix C-a
+unbind-key C-a
 unbind-key C-b
 set-option -sg escape-time 1
 # Double up on prefix to send it
@@ -17,11 +18,30 @@ bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
+bind-key    N command-prompt 'rename-window %%'
+bind-key    r source-file ~/.tmux.conf; display-message " ✱ ~/.tmux.conf is reloaded"
+bind-key    R refresh-client
 # Colors
 set-option -g default-terminal "screen-256color"
+# Allow utf-8
+set-option -g status-utf8 on
+# Status color
+set-option -g status-bg yellow
 # Update Interval
 set-option -g status-interval 60
 # Right side of status
-set-option -g status-right "#H"
-# Allow utf-8
-set-option -g status-utf8 on
+set-option -g status-left ' #[bold]❐ #S#[default] ♻ '
+set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
+# Set status length
+set-option -g status-right-length 60
+set-option -g status-left-length 60
+# highlight active window
+set-window-option -g window-status-current-bg colour166
+set-window-option -g window-status-current-fg colour15
+set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-format ' #I #W '
+# tmux window titling for X
+set-option -g set-titles on
+set-option -g set-titles-string '[#I] #W'
+set-window-option -g window-status-format ' #I #W '
+set-window-option -g window-status-attr bold
