Some updates to default tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,9 @@ set-window-option -g window-status-current-fg colour15
 set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-format ' #I #W '
 # tmux window titling for X
-set-option -g set-titles on
+set-option -g set-titles off
 set-option -g set-titles-string '[#I] #W'
 set-window-option -g window-status-format ' #I #W '
 set-window-option -g window-status-attr bold
+# start windows at 1 not 0
+set-option -g base-index 1
