Tmux changes: unset RBENV variables and include tmuxinator scripts

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -47,3 +47,6 @@ set-window-option -g window-status-format ' #I #W '
 set-window-option -g window-status-attr bold
 # start windows at 1 not 0
 set-option -g base-index 1
+# unset RBENV environment vars
+set-environment -gu RBENV_VERSION
+set-environment -gu RBENV_DIR
