--- a/.gitmodules
+++ b/.gitmodules
@@ -48,7 +48,7 @@
 	url = git://github.com/kien/ctrlp.vim.git
 [submodule "vim/bundle/vim-puppet"]
 	path = vim/bundle/vim-puppet
-	url = git://github.com/rodjek/vim-puppet.git
+	url = git@github.com:bryanjswift/vim-puppet.git
 [submodule "vim/bundle/tabular"]
 	path = vim/bundle/tabular
 	url = git://github.com/godlygeek/tabular.git
