--- a/config/mutt/gmail.com/bryanjswift/.muttrc
+++ b/config/mutt/gmail.com/bryanjswift/.muttrc
@@ -1,6 +1,6 @@
 #
 # Paths ----------------------------------------------
-set folder           = ~/Documents/.mail/gmail.com/bryanjswift  # mailbox location
+set folder           = /Volumes/Mail/gmail.com/bryanjswift  # mailbox location
 set alias_file       = ~/.mutt/general/alias                    # where to store aliases
 set header_cache     = ~/.mutt/general/cache/headers            # where to store headers
 set message_cachedir = ~/.mutt/general/cache/bodies             # where to store bodies
