--- a/config/mutt/lynr.co/bryan/.muttrc
+++ b/config/mutt/lynr.co/bryan/.muttrc
@@ -1,6 +1,6 @@
 #
 # Paths ----------------------------------------------
-set folder           = ~/Documents/.mail/lynr.co/bryan    # mailbox location
+set folder           = /Volumes/Mail/lynr.co/bryan    # mailbox location
 set alias_file       = ~/.mutt/general/alias              # where to store aliases
 set header_cache     = ~/.mutt/general/cache/headers      # where to store headers
 set message_cachedir = ~/.mutt/general/cache/bodies       # where to store bodies
