Show the junk mailbox so things can be marked spam

--- a/config/mutt/gmail.com/bryanjswift/.muttrc
+++ b/config/mutt/gmail.com/bryanjswift/.muttrc
@@ -52,6 +52,7 @@ mailboxes +INBOX \
           +archive \
           +drafts \
           +sent \
+          +junk \
 
 # Other special folders.
 set mbox      = "+archive"
