Show additional commonly used gmail labels/mailboxes

--- a/config/mutt/gmail.com/bryanjswift/.muttrc
+++ b/config/mutt/gmail.com/bryanjswift/.muttrc
@@ -53,6 +53,9 @@ mailboxes +INBOX \
           +drafts \
           +sent \
           +junk \
+          +freelance.tbar \
+          +lynr \
+          +taxes.2014 \
 
 # Other special folders.
 set mbox      = "+archive"
