--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/bundle/vim-investigate"]
 	path = vim/bundle/vim-investigate
 	url = https://github.com/Keithbsmiley/investigate.vim.git
+[submodule "vim/bundle/vim-elixir"]
+	path = vim/bundle/vim-elixir
+	url = git@github.com:elixir-lang/vim-elixir.git
