--- a/config/mutt/gmail.com/bryanjswift/.muttrc
+++ b/config/mutt/gmail.com/bryanjswift/.muttrc
@@ -1,5 +1,9 @@
 # Load global defaults
 source $HOME/Documents/code/dotconfig/config/mutt/muttrc
+source $HOME/Documents/code/dotconfig/config/mutt/crypto
+
+set pgp_sign_as=0xF9A56D56
+my_hdr X-PGP-Key: http://bryanwrit.es/pubkey.asc
 
 # * Override globals *
 
