--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -25,20 +25,15 @@ bind-key    R refresh-client
 set-option -g default-terminal "screen-256color"
 # Allow utf-8
 set-option -g status-utf8 on
-# Status color
-set-option -g status-bg yellow
 # Update Interval
 set-option -g status-interval 60
 # Right side of status
-set-option -g status-left ' #[bold]❐ #S#[default] ♻ '
+set-option -g status-left ' #[bold]⥂ #S#[default] ⚛ '
 set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
 # Set status length
 set-option -g status-right-length 60
 set-option -g status-left-length 60
-# highlight active window
-set-window-option -g window-status-current-bg colour166
-set-window-option -g window-status-current-fg colour15
-set-window-option -g window-status-current-attr bold
+# active window
 set-window-option -g window-status-current-format ' #I #W '
 # tmux window titling for X
 set-option -g set-titles off
@@ -50,3 +45,34 @@ set-option -g base-index 1
 # unset RBENV environment vars
 set-environment -gu RBENV_VERSION
 set-environment -gu RBENV_DIR
+
+#### COLOUR (Solarized 256 - Light)
+
+# default statusbar colors
+set-option -g status-bg colour254 #base2
+set-option -g status-fg colour241 #base00
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-bg default
+set-window-option -g window-status-fg colour245 #base1
+
+# active window title colors
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg colour125 #magenta
+
+# pane border (for multiple panes in one window)
+#set-option -g pane-active-border-fg colour240 #base01
+#set-option -g pane-border-fg colour235 #base02
+
+# pane number display
+#set-option -g display-panes-active-colour colour33 #blue
+#set-option -g display-panes-colour colour166 #orange
+
+# message text (replaces status when tmux messages me)
+# (Or command mode)
+set-option -g message-bg colour241 #base02
+set-option -g message-fg colour254 #base0
+
+# clock ??
+#set-window-option -g clock-mode-colour colour64 #green
