--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -22,12 +22,12 @@ bind-key    N command-prompt 'rename-window %%'
 bind-key    r source-file ~/.tmux.conf; display-message " ✱ ~/.tmux.conf is reloaded"
 bind-key    R refresh-client
 # Colors
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
 # Allow utf-8
 set-option -g status-utf8 on
 # Update Interval
 set-option -g status-interval 60
-# Right side of status
+# Status sides
 set-option -g status-left ' #[bold]⥂ #S#[default] ⚛ '
 set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
 # Set status length
@@ -52,6 +52,10 @@ set-environment -gu RBENV_DIR
 set-option -g status-bg colour254 #base2
 set-option -g status-fg colour241 #base00
 set-option -g status-attr default
+set-option -g status-left-bg colour254
+set-option -g status-left-fg colour241
+set-option -g status-right-bg colour254
+set-option -g status-right-fg colour241
 
 # default window title colors
 set-window-option -g window-status-bg default
