--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "certs"]
 	path = certs
 	url = git@github.com:bagder/ca-bundle.git
+[submodule "vim/bundle/ultisnips"]
+	path = vim/bundle/ultisnips
+	url = git@github.com:sirver/ultisnips.git
