Show travel mailbox in mutt

--- a/config/mutt/bryanwrit.es/mail/.muttrc
+++ b/config/mutt/bryanwrit.es/mail/.muttrc
@@ -18,6 +18,7 @@ set spoolfile = "+INBOX"
 # Mailboxes to show in the sidebar.
 mailboxes +INBOX \
           +archive \
+          +travel \
           +drafts \
           +sent \
           +junk \
