--- a/.gitmodules
+++ b/.gitmodules
@@ -39,7 +39,7 @@
 	url = git://github.com/kien/ctrlp.vim.git
 [submodule "vim/bundle/vim-puppet"]
 	path = vim/bundle/vim-puppet
-	url = git@github.com:bryanjswift/vim-puppet.git
+	url = git://github.com/bryanjswift/vim-puppet.git
 [submodule "vim/bundle/tabular"]
 	path = vim/bundle/tabular
 	url = git://github.com/godlygeek/tabular.git
@@ -48,25 +48,25 @@
 	url = git://github.com/vim-ruby/vim-ruby.git
 [submodule "vim/bundle/vim-golang"]
 	path = vim/bundle/vim-golang
-	url = git@github.com:jnwhiteh/vim-golang.git
+	url = git://github.com/jnwhiteh/vim-golang.git
 [submodule "vim/bundle/vim-vinegar"]
 	path = vim/bundle/vim-vinegar
-	url = git@github.com:tpope/vim-vinegar.git
+	url = git://github.com/tpope/vim-vinegar.git
 [submodule "vim/bundle/vim-elixir"]
 	path = vim/bundle/vim-elixir
-	url = git@github.com:elixir-lang/vim-elixir.git
+	url = git://github.com/elixir-lang/vim-elixir.git
 [submodule "vim/bundle/vim-coffee-script"]
 	path = vim/bundle/vim-coffee-script
-	url = git@github.com:kchmck/vim-coffee-script.git
+	url = git://github.com/kchmck/vim-coffee-script.git
 [submodule "vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
-	url = git@github.com:bling/vim-airline.git
+	url = git://github.com/bling/vim-airline.git
 [submodule "certs"]
 	path = certs
-	url = git@github.com:bagder/ca-bundle.git
+	url = git://github.com/bagder/ca-bundle.git
 [submodule "vim/bundle/ultisnips"]
 	path = vim/bundle/ultisnips
-	url = git@github.com:sirver/ultisnips.git
+	url = git://github.com/sirver/ultisnips.git
 [submodule "vim/bundle/vim-polyglot"]
 	path = vim/bundle/vim-polyglot
-	url = git@github.com:sheerun/vim-polyglot.git
+	url = git://github.com/sheerun/vim-polyglot.git
