--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/vim-polyglot"]
 	path = vim/bundle/vim-polyglot
 	url = git://github.com/sheerun/vim-polyglot.git
+[submodule "vim/bundle/vim-lightline"]
+	path = vim/bundle/vim-lightline
+	url = git://github.com/itchyny/lightline.vim.git
