--- a/config/mutt/lynr.co/support/.muttrc
+++ b/config/mutt/lynr.co/support/.muttrc
@@ -2,6 +2,7 @@
 source $HOME/Documents/code/dotconfig/config/mutt/muttrc
 
 # * Override globals *
+set status_format = "%f [%r%m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  support@lynr.co"
 
 #
 # Paths ----------------------------------------------
