--- a/config/mutt/knightstmpvar.com/bryan/.muttrc
+++ b/config/mutt/knightstmpvar.com/bryan/.muttrc
@@ -6,7 +6,7 @@ set pgp_sign_as=0xF9A56D56
 my_hdr X-PGP-Key: http://bryanwrit.es/pubkey.asc
 
 # * Override globals *
-set status_format = "%f [%r%m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  bryan@knightstmpvar.com"
+set status_format = "%f%r [ %m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  bryan@knightstmpvar.com"
 
 #
 # Paths ----------------------------------------------
