--- a/config/mutt/gmail.com/bryanjswift/.muttrc
+++ b/config/mutt/gmail.com/bryanjswift/.muttrc
@@ -6,7 +6,10 @@ set pgp_sign_as=0xF9A56D56
 my_hdr X-PGP-Key: http://bryanwrit.es/pubkey.asc
 
 # * Override globals *
+# Status Bar -----------------------------------------
 set status_format = "%f%r [ %m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  bryan.j.swift@gmail.com"
+# Compose View Options -------------------------------
+unset copy   # Don't copy sent mail, gmail does this
 
 #
 # Paths ----------------------------------------------
