--- a/config/mutt/wondersauce.com/bryan/.muttrc
+++ b/config/mutt/wondersauce.com/bryan/.muttrc
@@ -2,6 +2,10 @@
 source $HOME/Documents/code/dotconfig/config/mutt/muttrc
 
 # * Override globals *
+# Status Bar -----------------------------------------
+set status_format = "%f%r [ %m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  bryan@wondersauce.com"
+# Compose View Options -------------------------------
+unset copy   # Don't copy sent mail, gmail does this
 
 #
 # Paths ----------------------------------------------
