Add gradle plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/bundle/vim-lightline"]
 	path = vim/bundle/vim-lightline
 	url = git://github.com/itchyny/lightline.vim.git
+[submodule "vim/bundle/vim-gradle"]
+	path = vim/bundle/vim-gradle
+	url = git://github.com/tfnico/vim-gradle.git
