Change folders to display for gmail

--- a/config/mutt/gmail.com/bryanjswift/.muttrc
+++ b/config/mutt/gmail.com/bryanjswift/.muttrc
@@ -24,9 +24,8 @@ mailboxes +INBOX \
           +starred \
           +important \
           +archive \
-          +freelance.tbar \
-          +lynr \
           +taxes.2014 \
+          +taxes.2015 \
           +drafts \
           +sent \
           +junk \
