--- a/config/mutt/knightstmpvar.com/bryan/.muttrc
+++ b/config/mutt/knightstmpvar.com/bryan/.muttrc
@@ -20,6 +20,7 @@ set spoolfile = "+INBOX"
 mailboxes +INBOX \
           +archive \
           +archive.taxes-2014 \
+          +archive.taxes-2015 \
           +drafts \
           +sent \
           +junk \
