--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "vim/bundle/vim-tern"]
 	path = vim/bundle/vim-tern
 	url = git@github.com:ternjs/tern_for_vim.git
+[submodule "vim/bundle/vim-autotag"]
+	path = vim/bundle/vim-autotag
+	url = git@github.com:craigemery/vim-autotag.git
