Use the maintained repository for ctrlp.vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 	url = git://github.com/bryanjswift/vim-rust.git
 [submodule "vim/bundle/ctrlp-vim"]
 	path = vim/bundle/ctrlp-vim
-	url = git://github.com/kien/ctrlp.vim.git
+	url = git://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "vim/bundle/vim-puppet"]
 	path = vim/bundle/vim-puppet
 	url = git://github.com/bryanjswift/vim-puppet.git
