Comment out gpg-agent.conf line about `use-standard-socket`

--- a/config/gpg/gpg-agent.conf
+++ b/config/gpg/gpg-agent.conf
@@ -1,5 +1,6 @@
 # Enables GPG to find gpg-agent
-use-standard-socket
+# This option is obsolute with recent builds of gnupg
+#use-standard-socket
 
 # Connects gpg-agent to the OSX keychain via the brew-installed
 # pinentry program from GPGtools. This is the OSX 'magic sauce',
