--- a/config/mutt/siberia.io/bryan/.muttrc
+++ b/config/mutt/siberia.io/bryan/.muttrc
@@ -23,6 +23,7 @@ set folder           = /Volumes/Mail/siberia.io/bryan  # mailbox location
 set spoolfile = "+INBOX"
 # Mailboxes to show in the sidebar.
 mailboxes +INBOX \
+          +starred \
           +archive \
           +drafts \
           +sent \
