--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/bundle/vim-autotag"]
 	path = vim/bundle/vim-autotag
 	url = git://github.com/craigemery/vim-autotag.git
+[submodule "vim/bundle/vim-reason-plus"]
+	path = vim/bundle/vim-reason-plus
+	url = git@github.com:reasonml-editor/vim-reason-plus.git
