--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/async-vim"]
 	path = vim/bundle/async-vim
 	url = https://github.com/prabirshrestha/async.vim.git
+[submodule "vim/bundle/vim-lsp"]
+	path = vim/bundle/vim-lsp
+	url = https://github.com/prabirshrestha/vim-lsp.git
