Update tmux.conf to not barf because of settings changes

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -23,12 +23,10 @@ bind-key    r source-file ~/.tmux.conf; display-message " ✱ ~/.tmux.conf is re
 bind-key    R refresh-client
 # Colors
 set-option -g default-terminal "xterm-256color"
-# Allow utf-8
-set-option -g status-utf8 on
 # Update Interval
 set-option -g status-interval 60
 # Status sides
-set-option -g status-left ' #[bold]⥂ #S#[default] ⚛ '
+set-option -g status-left ' #[bold]⥂ #S#[default] '
 set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
 # Set status length
 set-option -g status-right-length 60
@@ -39,7 +37,7 @@ set-window-option -g window-status-current-format ' #I #W '
 set-option -g set-titles off
 set-option -g set-titles-string '[#I] #W'
 set-window-option -g window-status-format ' #I #W '
-set-window-option -g window-status-attr bold
+set-window-option -g window-status-style bold
 # start windows at 1 not 0
 set-option -g base-index 1
 # unset RBENV environment vars
@@ -49,21 +47,18 @@ set-environment -gu RBENV_DIR
 #### COLOUR (Solarized 256 - Light)
 
 # default statusbar colors
-set-option -g status-bg colour254 #base2
-set-option -g status-fg colour241 #base00
-set-option -g status-attr default
-set-option -g status-left-bg colour254
-set-option -g status-left-fg colour241
-set-option -g status-right-bg colour254
-set-option -g status-right-fg colour241
+set-option -g status-style bg=colour254,fg=colour241
+#                           #=base2      #=base00
+set-option -g status-left-style bg=colour254,fg=colour241
+set-option -g status-right-style bg=colour254,fg=colour241
 
 # default window title colors
-set-window-option -g window-status-bg default
-set-window-option -g window-status-fg colour245 #base1
+set-window-option -g window-status-style bg=default,fg=colour245
+#                                                    #=base1
 
 # active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour125 #magenta
+set-window-option -g window-status-current-style bg=default,fg=colour125
+#                                                            #=magenta
 
 # pane border (for multiple panes in one window)
 #set-option -g pane-active-border-fg colour240 #base01
@@ -75,8 +70,8 @@ set-window-option -g window-status-current-fg colour125 #magenta
 
 # message text (replaces status when tmux messages me)
 # (Or command mode)
-set-option -g message-bg colour241 #base02
-set-option -g message-fg colour254 #base0
+set-option -g message-style bg=colour241,fg=colour254
+#                            #=base02     #=base0
 
 # clock ??
 #set-window-option -g clock-mode-colour colour64 #green
