--- a/.gitmodules
+++ b/.gitmodules
@@ -2,22 +2,22 @@
 	path = vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
 [submodule "vim-colors-solorized"]
-	path = vim/bundle/vim-colors-solarized
+	path = vim/pack/main/start/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
 [submodule "vim-gundo"]
-	path = vim/bundle/gundo
+	path = vim/pack/main/start/gundo
 	url = http://github.com/sjl/gundo.vim.git
 [submodule "vim-rails"]
 	path = vim/bundle/vim-rails
 	url = git://github.com/tpope/vim-rails.git
 [submodule "vim-rooter"]
-	path = vim/bundle/vim-rooter
+	path = vim/pack/main/start/vim-rooter
 	url = git://github.com/airblade/vim-rooter.git
 [submodule "vim-surround"]
-	path = vim/bundle/vim-surround
+	path = vim/pack/main/start/vim-surround
 	url = git://github.com/tpope/vim-surround.git
 [submodule "vim/bundle/editorconfig-vim"]
-	path = vim/bundle/editorconfig-vim
+	path = vim/pack/main/start/editorconfig-vim
 	url = git://github.com/editorconfig/editorconfig-vim.git
 [submodule "vim/bundle/vim-less"]
 	path = vim/bundle/vim-less
@@ -26,7 +26,7 @@
 	path = vim/bundle/vim-scala
 	url = git://github.com/derekwyatt/vim-scala.git
 [submodule "vim/bundle/tagbar"]
-	path = vim/bundle/tagbar
+	path = vim/pack/main/start/tagbar
 	url = https://github.com/majutsushi/tagbar.git
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
@@ -35,7 +35,7 @@
 	path = vim/bundle/vim-rust
 	url = git://github.com/bryanjswift/vim-rust.git
 [submodule "vim/bundle/ctrlp-vim"]
-	path = vim/bundle/ctrlp-vim
+	path = vim/pack/main/start/ctrlp-vim
 	url = git://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "vim/bundle/vim-puppet"]
 	path = vim/bundle/vim-puppet
@@ -47,7 +47,7 @@
 	path = vim/bundle/vim-golang
 	url = git://github.com/jnwhiteh/vim-golang.git
 [submodule "vim/bundle/vim-vinegar"]
-	path = vim/bundle/vim-vinegar
+	path = vim/pack/main/start/vim-vinegar
 	url = git://github.com/tpope/vim-vinegar.git
 [submodule "vim/bundle/vim-elixir"]
 	path = vim/bundle/vim-elixir
@@ -56,26 +56,26 @@
 	path = vim/bundle/vim-coffee-script
 	url = git://github.com/kchmck/vim-coffee-script.git
 [submodule "vim/bundle/vim-polyglot"]
-	path = vim/bundle/vim-polyglot
+	path = vim/pack/main/start/vim-polyglot
 	url = git://github.com/sheerun/vim-polyglot.git
 [submodule "vim/bundle/vim-lightline"]
-	path = vim/bundle/vim-lightline
+	path = vim/pack/main/start/vim-lightline
 	url = git://github.com/itchyny/lightline.vim.git
 [submodule "vim/bundle/vim-gradle"]
-	path = vim/bundle/vim-gradle
+	path = vim/pack/main/start/vim-gradle
 	url = git://github.com/tfnico/vim-gradle.git
 [submodule "vim/bundle/vim-reason-plus"]
 	path = vim/bundle/vim-reason-plus
 	url = git@github.com:reasonml-editor/vim-reason-plus.git
 [submodule "vim/bundle/ale"]
-	path = vim/bundle/ale
+	path = vim/pack/main/start/ale
 	url = https://github.com/w0rp/ale.git
 [submodule "vim/bundle/async-vim"]
-	path = vim/bundle/async-vim
+	path = vim/pack/main/start/async-vim
 	url = https://github.com/prabirshrestha/async.vim.git
 [submodule "vim/bundle/vim-lsp"]
-	path = vim/bundle/vim-lsp
+	path = vim/pack/main/start/vim-lsp
 	url = https://github.com/prabirshrestha/vim-lsp.git
 [submodule "vim/bundle/vim-racer"]
-	path = vim/bundle/vim-racer
+	path = vim/pack/main/start/vim-racer
 	url = https://github.com/racer-rust/vim-racer.git
