--- a/config/mutt/bryanwrit.es/mail/.muttrc
+++ b/config/mutt/bryanwrit.es/mail/.muttrc
@@ -3,7 +3,7 @@ source $HOME/Documents/code/dotconfig/config/mutt/muttrc
 source $HOME/Documents/code/dotconfig/config/mutt/crypto
 
 set pgp_sign_as=0xF9A56D56
-my_hdr X-PGP-Key: http://bryanwrit.es/pubkey.asc
+my_hdr X-PGP-Key: https://bryanwrit.es/pubkey.asc
 
 # * Override globals *
 set status_format = "%f%r [ %m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  mail@bryanwrit.es"
