Update gpg configuration files

--- a/config/gpg/gpg-agent.conf
+++ b/config/gpg/gpg-agent.conf
@@ -1,9 +1,8 @@
-# Enables GPG to find gpg-agent
-# This option is obsolute with recent builds of gnupg
-#use-standard-socket
-
 # Connects gpg-agent to the OSX keychain via the brew-installed
 # pinentry program from GPGtools. This is the OSX 'magic sauce',
 # allowing the gpg key's passphrase to be stored in the login
 # keychain, enabling automatic key signing.
 pinentry-program /usr/local/bin/pinentry-mac
+pinentry-timeout 60
+default-cache-ttl 3600
+max-cache-ttl 86400
