--- a/config/gpg/gpg.conf
+++ b/config/gpg/gpg.conf
@@ -21,32 +21,19 @@
 # See the man page for a list of options.
 
 # Uncomment the following option to get rid of the copyright notice
-#
-no-greeting
+
+#no-greeting
 
 # If you have more than 1 secret key in your keyring, you may want to
 # uncomment the following option and set your preferred keyid.
-#
+
 #default-key 621CC013
-
-# When verifying a signature made from a subkey, ensure that the cross
-# certification "back signature" on the subkey is present and valid.
-# This protects against a subtle attack against subkeys that can sign.
-# Defaults to --no-require-cross-certification.  However for new
-# installations it should be enabled.
-#
-require-cross-certification
-
-# Some old Windows platforms require 8.3 filenames.  If your system
-# can handle long filenames, uncomment this.
-#
-no-mangle-dos-filenames
 
 # If you do not pass a recipient to gpg, it will ask for one.  Using
 # this option you can encrypt to a default key.  Key validation will
 # not be done in this case.  The second form uses the default key as
 # default recipient.
-#
+
 #default-recipient some-user-id
 #default-recipient-self
 
@@ -55,20 +42,20 @@ no-mangle-dos-filenames
 # mail client that does not automatically encrypt mail to your key.
 # In the example, this option allows you to read your local copy of
 # encrypted mail that you've sent to others.
-#
+
 #encrypt-to some-key-id
 
 # By default GnuPG creates version 4 signatures for data files as
 # specified by OpenPGP.  Some earlier (PGP 6, PGP 7) versions of PGP
 # require the older version 3 signatures.  Setting this option forces
 # GnuPG to create version 3 signatures.
-#
+
 #force-v3-sigs
 
 # Because some mailers change lines starting with "From " to ">From "
 # it is good to handle such lines in a special way when creating
 # cleartext signatures; all other PGP versions do it this way too.
-#
+
 #no-escape-from-lines
 
 # If you do not use the Latin-1 (ISO-8859-1) charset, you should tell
@@ -78,8 +65,8 @@ no-mangle-dos-filenames
 # translation.  Note that future version of GnuPG will change to UTF-8
 # as default character set.  In most cases this option is not required
 # as GnuPG is able to figure out the correct charset at runtime.
-#
-charset utf-8
+
+#charset utf-8
 
 # Group names may be defined like this:
 #   group mynames = paige 0x12345678 joe patti
@@ -90,13 +77,13 @@ charset utf-8
 # cannot make an group that points to another group.  Note also that
 # if there are spaces in the recipient name, this will appear as two
 # recipients.  In these cases it is better to use the key ID.
-#
+
 #group mynames = paige 0x12345678 joe patti
 
 # Lock the file only once for the lifetime of a process.  If you do
 # not define this, the lock will be obtained and released every time
 # it is needed, which is usually preferable.
-#
+
 #lock-once
 
 # GnuPG can send and receive keys to and from a keyserver.  These
@@ -125,8 +112,8 @@ charset utf-8
 # such a "server", which spreads the load over a number of physical
 # servers.  To see the IP address of the server actually used, you may use
 # the "--keyserver-options debug".
-#
-keyserver hkp://pgp.mit.edu
+
+keyserver hkp://keys.gnupg.net
 #keyserver mailto:pgp-public-keys@keys.nl.pgp.net
 #keyserver ldap://keyserver.pgp.com
 
@@ -160,30 +147,16 @@ keyserver hkp://pgp.mit.edu
 #
 # no-include-attributes : do not include attribute IDs (aka "photo IDs")
 #                         when sending keys to the keyserver.
-#
-keyserver-options auto-key-retrieve
 
-# Don't leak DNS, see https://trac.torproject.org/projects/tor/ticket/2846
-#
-keyserver-options no-try-dns-srv
-
-# When using --refresh-keys, if the key in question has a preferred keyserver
-# URL, then disable use of that preferred keyserver to refresh the key from
-#
-keyserver-options no-honor-keyserver-url
-
-# When searching for a key with --search-keys, include keys that are marked on
-# the keyserver as revoked
-#
-keyserver-options include-revoked
+#keyserver-options auto-key-retrieve
 
 # Display photo user IDs in key listings
-#
+
 # list-options show-photos
 
 # Display photo user IDs when a signature from a key with a photo is
 # verified
-#
+
 # verify-options show-photos
 
 # Use this program to display photo user IDs
@@ -260,61 +233,4 @@ use-agent
 # You may also list arbitrary keyservers here by URL.
 #
 # Try CERT, then PKA, then LDAP, then hkp://subkeys.net:
-#
-auto-key-locate cert pka keyserver
-
-###################################
-######## Display Options ##########
-###################################
-
-
-# When signing keys, always ask for the certification level
-#
-ask-cert-level
-
-# Disable inclusion of the version string in ASCII armored output
-#
-no-emit-version
-
-# Disable comment string in clear text signatures and ASCII armored messages
-#
-no-comments
-
-# Display long key IDs
-#
-keyid-format 0xlong
-
-# List all keys (or the specified ones) along with their fingerprints
-#
-with-fingerprint
-
-# Display the calculated validity of user IDs during key listings
-#
-list-options show-uid-validity
-list-options show-policy-urls
-list-options show-keyserver-urls
-verify-options show-uid-validity
-verify-options show-policy-urls
-
-###################################
-######## Crypto Options ###########
-###################################
-
-# message digest algorithm used when signing a key
-#
-cert-digest-algo SHA512
-
-# This preference list is used for new keys and becomes the default for
-# "setpref" in the edit menu
-#
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-
-# list of personal digest preferences. When multiple ciphers are supported by
-# all recipients, choose the strongest one
-#
-personal-digest-preferences SHA512 SHA384 SHA256 SHA224
-
-# list of personal cipher preferences. When multiple ciphers are supported by
-# all recipients, choose the strongest one
-#
-personal-cipher-preferences AES256 AES192 AES CAST5
+#auto-key-locate cert pka ldap hkp://subkeys.pgp.net
