--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,9 @@
 [submodule "vim/pack/main/start/vista-vim"]
 	path = vim/pack/main/start/vista-vim
 	url = https://github.com/liuchengxu/vista.vim.git
+[submodule "vim/pack/main/start/fzf-vim"]
+	path = vim/pack/main/start/fzf-vim
+	url = https://github.com/junegunn/fzf.vim.git
+[submodule "vim/pack/main/start/fzf"]
+	path = vim/pack/main/start/fzf
+	url = https://github.com/junegunn/fzf.git
