Include moving-2020, taxes-2019 and taxes-2020 folders in mutt

--- a/config/mutt/bryanwrit.es/mail/.muttrc
+++ b/config/mutt/bryanwrit.es/mail/.muttrc
@@ -19,7 +19,9 @@ set spoolfile = "+INBOX"
 # Mailboxes to show in the sidebar.
 mailboxes +INBOX \
           +archive \
-          +archive.taxes-2018 \
+          +archive.moving-2020 \
+          +archive.taxes-2019 \
+          +archive.taxes-2020 \
           +archive.travel \
           +drafts \
           +sent \
