Remove deleted, renamed and stashed from git status format
Rather than removing the displayed value don't display them at all.

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -7,10 +7,8 @@ symbol = "⬢ "
 style = "green"
 
 [git_status]
-deleted = ""
+format = '([\[$conflicted$modified$staged$untracked$ahead_behind\]]($style) )'
 modified = "*"
-renamed = ""
-stashed = ""
 style = "bold red"
 
 [package]
