Remove symbol from battery configuration in starship

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -2,6 +2,9 @@
 symbol = "☁ "
 displayed_items = "profile"
 
+[batter]
+format = "[$percentage]($style) "
+
 [nodejs]
 symbol = "⬢ "
 style = "green"
