--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/pack/main/start/plantuml-syntax"]
 	path = vim/pack/main/start/plantuml-syntax
 	url = https://github.com/aklt/plantuml-syntax.git
+[submodule "vim/pack/main/start/vim-dbml"]
+	path = vim/pack/main/start/vim-dbml
+	url = https://github.com/jidn/vim-dbml.git
