--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -75,3 +75,7 @@ set-option -g message-style bg=colour241,fg=colour254
 
 # clock ??
 #set-window-option -g clock-mode-colour colour64 #green
+
+#### Tmux Plugins
+##### Tmux resurrect (https://github.com/tmux-plugins/tmux-resurrect)
+run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
