--- a/config/mutt/bryanjswift.com/bryan/.muttrc
+++ b/config/mutt/bryanjswift.com/bryan/.muttrc
@@ -3,10 +3,10 @@ source $HOME/Documents/code/dotconfig/config/mutt/muttrc
 source $HOME/Documents/code/dotconfig/config/mutt/crypto
 
 set pgp_sign_as=0xF9A56D56
-my_hdr X-PGP-Key: https://bryanwrit.es/pubkey.asc
+my_hdr X-PGP-Key: https://bryanjswift.com/pubkey.asc
 
 # * Override globals *
-set status_format = "%f%r [ %m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  mail@bryanwrit.es"
+set status_format = "%f%r [ %m msgs%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]%> %?p?( %p postponed )?  bryan@bryanjswift.com"
 
 #
 # Paths ----------------------------------------------
@@ -38,5 +38,5 @@ macro index O "<shell-escape>mbsync fastmail<enter>"               "run mbsync t
 macro index o "<shell-escape>mbsync fastmail-default:INBOX<enter>" "run mbsync to sync inbox"
 #
 # Compose View Options -------------------------------
-set from     = "mail@bryanwrit.es"
-set sendmail = "/usr/local/bin/msmtp -a mail-bryanwrites"
+set from     = "bryan@bryanjswift.com"
+set sendmail = "/usr/local/bin/msmtp -a bryan-bryanjswift"
