Add pgp signing configuration for lcd account

--- a/config/mutt/littlecinema.net/bryanswift/.muttrc
+++ b/config/mutt/littlecinema.net/bryanswift/.muttrc
@@ -1,5 +1,11 @@
 # Load global defaults
 source $HOME/Documents/code/dotconfig/config/mutt/muttrc
+source $HOME/Documents/code/dotconfig/config/mutt/crypto
+
+set pgp_sign_as=D4EE9EB5CCE323A1FAFC123DC7A55865A1088B7D
+my_hdr X-PGP-Key: https://bryanjswift.com/lcd-publickey.asc
+set pgp_encrypt_only_command="pgpewrap gpg --batch --quiet --no-verbose --output - --encrypt --textmode --armor --always-trust --encrypt-to D4EE9EB5CCE323A1FAFC123DC7A55865A1088B7D -- -r %r -- %f"
+set pgp_encrypt_sign_command="pgpewrap gpg --passphrase-fd 0 --batch --quiet --no-verbose --textmode --output - --encrypt --sign %?a?-u %a? --armor --always-trust --encrypt-to D4EE9EB5CCE323A1FAFC123DC7A55865A1088B7D -- -r %r -- %f"
 
 # * Override globals *
 # Status Bar -----------------------------------------
