`pinentry-mac` is not working under macOS 12.x
When triggered by a shell command the `pinentry-mac` program is never
able to capture keyboard input.

--- a/config/gpg/gpg-agent.conf
+++ b/config/gpg/gpg-agent.conf
@@ -2,7 +2,7 @@
 # pinentry program from GPGtools. This is the OSX 'magic sauce',
 # allowing the gpg key's passphrase to be stored in the login
 # keychain, enabling automatic key signing.
-pinentry-program /usr/local/bin/pinentry-mac
+pinentry-program /usr/local/bin/pinentry
 pinentry-timeout 60
 default-cache-ttl 3600
 max-cache-ttl 86400
