Add `vim-colors-catppuccin` to submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "config/tmux/plugins/tmux-resurrect"]
 	path = config/tmux/plugins/tmux-resurrect
 	url = https://github.com/tmux-plugins/tmux-resurrect
+[submodule "vim/pack/main/start/vim-colors-catppuccin"]
+	path = vim/pack/main/start/vim-colors-catppuccin
+	url = https://github.com/catppuccin/vim.git
