Disable gradle module in starship

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -16,6 +16,9 @@ format = '([\[$conflicted$modified$staged$untracked$ahead_behind\]]($style) )'
 modified = "*"
 style = "bold red"
 
+[gradle]
+disabled = true
+
 [package]
 disabled = true
 
