--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -79,3 +79,19 @@ set-option -g message-style bg=colour241,fg=colour254
 #### Tmux Plugins
 ##### Tmux resurrect (https://github.com/tmux-plugins/tmux-resurrect)
 run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
+##### Tmux catppuccin colors
+# run '~/.tmux/plugins/tmux-catppuccin/catppuccin-latte.tmuxtheme'
+# --> Catppuccin (Latte)
+thm_bg="#dce0e8"
+thm_fg="#4c4f69"
+thm_cyan="#179299"
+thm_black="#e6e9ef"
+thm_gray="#bcc0cc"
+thm_magenta="#ea76cb"
+thm_pink="#8839ef"
+thm_red="#d20f39"
+thm_green="#40a02b"
+thm_yellow="#df8e1d"
+thm_blue="#1e66f5"
+thm_orange="#fe640b"
+thm_black4="#acb0be"
