Disable docker context and kotlin in starship

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -6,6 +6,12 @@ format = 'on [$symbol($profile )]($style)'
 [battery]
 format = '[$percentage]($style) '
 
+[docker_context]
+disabled = true
+
+[kotlin]
+disabled = true
+
 [nodejs]
 symbol = "⬢ "
 style = "green"
